<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FF9800"
        android:textSize="25sp"
        android:outlineSpotShadowColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="196dp"
        android:layout_height="96dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="584dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/editTextNumber1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:outlineAmbientShadowColor="#000000"
            android:hint="@string/name"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColorHint="#4CAF50" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:outlineAmbientShadowColor="#000000"
            android:hint="@string/edad"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColorHint="#4CAF50" />
    </LinearLayout>

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/radioButton5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="9dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton4" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="11dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton5" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="39dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/radioButton4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/icons8_perro_100" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="39dp"
        android:layout_height="41dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="460dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioButton5"
        app:srcCompat="@drawable/icons8_gato_100" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="413dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioButton6"
        app:srcCompat="@drawable/icons8_conejo_100" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="48dp"
        android:text="@string/dog"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:text="@string/cat"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:text="@string/bunny"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="380dp"
        android:text="@string/servicio"
        android:textColor="#FF9800"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="171dp"
        android:layout_height="196dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/rabia" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/parvo" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/Lepto" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/despa" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="135dp"
        android:layout_height="141dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/exam" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/aplica" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/corte" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/cobro"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/btnsalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginBottom="20dp"
        android:text="@string/salir"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/teal_200"
        android:onClick="enviar"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>